Fixed favorite component - needed import statement in styles.css

--- a/src/app/favorite/favorite.component.html
+++ b/src/app/favorite/favorite.component.html
@@ -1,7 +1,5 @@
-<p>
-  favorite works!
-</p>
-<hr>
+<h3>Favorite Component</h3>
+
 <p>
   <span class="glyphicon" 
   [class.glyphicon-star]="isFavorite"
@@ -9,3 +7,4 @@
   (click)="onClick()"
   ></span>
 </p>
+<hr>
